--- a/source/catalog.html
+++ b/source/catalog.html
@@ -96,7 +96,7 @@
             </div>
         </section>
         <section class="video">
-            <div class="video-content">
+            <div class="video__content">
                 <h2 class="video__heading">Все еще сомневаетесь?</h2>
                 <p class="video__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной рас!</p>
             </div>
