--- a/source/form.html
+++ b/source/form.html
@@ -51,14 +51,14 @@
                 <legend class="page-form__section-legend">Представьтесь:</legend>
                 <div class="fieldset-line presents-section__line">
                     <label class="presents-section__label" for="name">Имя<sup>*</sup>:</label>
-                    <input class="fieldset-line__input presents-section__input" id="name" type="text" name="name" placeholder="Петр">
+                    <input class="fieldset-line__input presents-section__input" id="name" type="text" name="name" required placeholder="Петр">
                 </div>
                 <div class="fieldset-line presents-section__line">
                     <label class="presents-section__label" for="lastname">Фамилия<sup>*</sup>:</label>
-                    <input class="fieldset-line__input presents-section__input" id="lastname" type="text" name="lastname" placeholder="Иванов">
+                    <input class="fieldset-line__input presents-section__input" id="lastname" type="text" name="lastname" required placeholder="Иванов">
                 </div>
                 <div class="fieldset-line presents-section__line">
-                    <label class="presents-section__label" for="patronymic">Отчество<sup>*</sup>:</label>
+                    <label class="presents-section__label" for="patronymic">Отчество:</label>
                     <input class="fieldset-line__input presents-section__input" id="patronymic" type="text" name="patronymic" placeholder="Александрович">
                 </div>
             </fieldset>
@@ -67,7 +67,7 @@
                 <div class="fieldset-line contact-section__line">
                     <label class="contact-section__label" for="phone">Контактный телефон<sup>*</sup>:</label>
                     <div class="contact-section__input-content">
-                        <input class="fieldset-line__input contact-section__input contact-section__input-phone" id="phone" type="tel" name="phone" placeholder="Введите телефон">
+                        <input class="fieldset-line__input contact-section__input contact-section__input-phone" id="phone" type="tel" name="phone" required placeholder="Введите телефон">
                         <div class="contact-section__icon-content">
                             <img class="conect-section__icon" src="img/icon-phone.svg" width="18" height="18" alt="Иконка телефона">
                         </div>
@@ -76,7 +76,7 @@
                 <div class="fieldset-line contact-section__line">
                     <label class="contact-section__label" for="email">Электронная почта<sup>*</sup>:</label>
                     <div class="contact-section__input-content">
-                        <input class="fieldset-line__input contact-section__input contact-section__input-email" id="email" type="email" name="email" placeholder="Введите e-mail">
+                        <input class="fieldset-line__input contact-section__input contact-section__input-email" id="email" type="email" name="email" required placeholder="Введите e-mail">
                         <div class="contact-section__icon-content">
                             <img class="conect-section__icon" src="img/icon-email.svg" width="16" height="12" alt="Иконка почты">
                         </div>
