--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
 </head>
@@ -12,11 +13,11 @@
         <a class="page-header__logo" href="index.html">
             <img src="img/logotype-mobile.png" alt="Главный логотип">
         </a>
-        <nav class="main-nav">
+        <nav class="main-nav main-nav--opened">
             <button class="main-nav__toggle" type="button">
                 <span class="visually-hidden">Открыть меню</span>
             </button>
-            <div class="visually-hidden main-nav__wrapper">
+            <div class="main-nav__wrapper">
                 <ul class="main-nav__list site-list">
                     <li class="site-list__item site-list__item--current">
                         <a href="index.html">Главная</a>
@@ -46,73 +47,107 @@
     <main class="page-main">
         <h1 class="visually-hidden">Туристический город Седона</h1>
         <header class="page-main__header">
-            <h3 class="page-main__header-heading page-main__header-heading">Седона - небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h3>
+            <h3 class="page-main__header-heading page-main__header-heading">Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
             <p class="page-main__header-text">Рассмотрим 5 причин,по которым Седона круче,чем Гранд Каньон!</p>
         </header>
         <section class="advantages">
             <h2 class="visually-hidden">Наши преимущества</h2>
             <article class="advantages-section">
-                <header class="advantages-section__header advantages-section__header--lightblue">
-                    <h3 class="advantages-section__header-heading advantages-section__header-heading--white">Настоящий городок</h3>
-                    <p class="advantages-section__header-text advantages-section__header-text--white advantages-section__header-number">№1</p>
-                    <p class="advantages-section__header-text advantages-section__header-text--white">Седона не аттракцион для туристов,там течет своя жизнь</p>
-                </header>
-                <img class="advantages-section__img" src="img/advantages-img1.jpg" width="320" height="260" alt="Настоящий городок первая картинка">
-                <div class="advantages-section__item">
-                    <h3 class="advantages-section__item-heading advantages-section__item-heading--house">Жилье</h3>
-                    <p class="advantages-section__item-text">Рекомендуем пожить в настоящем мотелеб все как в кино!</p>
-                </div>
-                <div class="advantages-section__item">
-                    <h3 class="advantages-section__item-heading advantages-section__item-heading--gift">Сувениры</h3>
-                    <p class="advantages-section__item-text">Не только Китайского, но и местного производства!</p>
-                </div>
-                <div class="advantages-section__item">
-                    <h3 class="advantages-section__item-heading advantages-section__item-heading--burger">Еда</h3>
-                    <p class="advantages-section__item-text">Всегда заказывайте фирменный бургер, вы не разочеруетесь!</p>
-                </div>
-            </article>
-
-            <article class="advantages-section">
-                <header class="advantages-section__header advantages-section__header--lightblue">
-                    <h3 class="advantages-section__header-heading advantages-section__header-heading--white">Там есть мост дьявола</h3>
-                    <p class="advantages-section__header-text advantages-section__header-text--white advantages-section__header-number">№2</p>
-                    <p class="advantages-section__header-text advantages-section__header-text--white">Да,по нему можно пройти! Если вы осмелитесь,конечно</p>
-                </header>
-                <img class="advantages-section__img advantages-section__img-last" src="img/advantages-img2.jpg" width="320" height="260" alt="Настоящий городок первая картинка">
-            </article>
-
-            <article class="advantages-section">
                 <header class="advantages-section__header">
-                    <h3 class="advantages-section__header-heading">Небольшая площадь</h3>
-                    <p class="advantages-section__header-number">№3</p>
-                    <p class="advantages-section__header-text">Все интересные места находятся очень близко</p>
+                    <div class="advantages-section__header-content advantages-section__header-content-lightblue advantages-section__header-content--first">
+                        <h3 class="advantages-section__header-heading">Настоящий городок</h3>
+                        <p class="advantages-section__header-text  advantages-section__header-number">№1</p>
+                        <p class="advantages-section__header-text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+                    </div>
+                    <picture>
+                        <source media="(min-width: 1200px)" srcset="img/advantages-img1-desktop.jpg 1x, img/advantages-img1-desktop@2x.jpg 2x">
+                        <source media="(min-width: 768px)" srcset="img/advantages-img1-tablet.jpg 1x, img/advantages-img1-tablet@2x.jpg 2x">
+                        <img class="advantages-section__img" src="img/advantages-img1-mobile.jpg" srcset="img/advantages-img1-mobile@2x.jpg 2x" width="320" height="260" alt="Настоящий городок первая картинка">
+                    </picture>
                 </header>
+                <div class="advantages-section__content">
+                    <div class="advantages-section__item">
+                        <img class="advantages-section__item-icon" src="img/icon-house.svg" width="39" height="37" alt="Иконка домик">
+                        <div class="advantages-section__item-content">
+                            <h3 class="advantages-section__item-heading advantages-section__item-heading--house">Жилье</h3>
+                            <p class="advantages-section__item-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                        </div>
+                    </div>
+                    <div class="advantages-section__item">
+                        <img class="advantages-section__item-icon" src="img/icon-gift.svg" width="32" height="38" alt="Иконка подарок">
+                        <div class="advantages-section__item-content">
+                            <h3 class="advantages-section__item-heading advantages-section__item-heading--gift">Сувениры</h3>
+                            <p class="advantages-section__item-text">Не только Китайского, но и местного производства!</p>
+                        </div>
+                    </div>
+                    <div class="advantages-section__item advantages-section__item--last">
+                        <img class="advantages-section__item-icon" src="img/icon-burger.svg" width="40" height="35" alt="Иконка бургер">
+                        <div class="advantages-section__item-content">
+                            <h3 class="advantages-section__item-heading advantages-section__item-heading--burger">Еда</h3>
+                            <p class="advantages-section__item-text">Всегда заказывайте<br>фирменный бургер, вы не разочаруетесь!</p>
+                        </div>
+                    </div>
+                </div>
             </article>
 
             <article class="advantages-section">
-                <header class="advantages-section__header">
-                    <h3 class="advantages-section__header-heading">Красивая дорога</h3>
-                    <p class="advantages-section__header-number">№4</p>
-                    <p class="advantages-section__header-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <header class="advantages-section__header advantages-section__header--last">
+                    <div class="advantages-section__header-content advantages-section__header-content-lightblue advantages-section__header-content--last">
+                        <h3 class="advantages-section__header-heading">Там есть мост дьявола</h3>
+                        <p class="advantages-section__header-text  advantages-section__header-number">№2</p>
+                        <p class="advantages-section__header-text">Да,по нему можно пройти! Если вы осмелитесь,конечно</p>
+                    </div>
+                    <picture>
+                        <source class="(min-width: 1200px)" srcset="img/advantages-img2-desktop.jpg 1x, img/advantages-img2-desktop@2x.jpg 2x">
+                        <source media="(min-width: 768px)" srcset="img/advantages-img2-tablet.jpg 1x, img/advantages-img2-tablet@2x.jpg 2x">
+                        <img class="advantages-section__img" src="img/advantages-img2-mobile.jpg" srcset="img/advantages-img2-mobile@2x.jpg 2x" width="320" height="260" alt="Настоящий городок первая картинка">
+                    </picture>
                 </header>
             </article>
 
-            <article class="advantages-section">
-                <header class="advantages-section__header">
-                    <h3 class="advantages-section__header-heading">Мало туристов</h3>
-                    <p class="advantages-section__header-number">№5</p>
-                    <p class="advantages-section__header-text">Большинство едет в Гранд Каньон и толпится там</p>
-                </header>
-            </article>
+            <div class="advantages__inner-sections">
+                <article class="advantages-section">
+                    <header class="advantages-section__header-content">
+                        <h3 class="advantages-section__header-heading">Небольшая площадь</h3>
+                        <p class="advantages-section__header-number">№3</p>
+                        <p class="advantages-section__header-text">Все интересные места находятся очень близко</p>
+                    </header>
+                </article>
+
+                <article class="advantages-section">
+                    <header class="advantages-section__header-content">
+                        <h3 class="advantages-section__header-heading">Красивая дорога</h3>
+                        <p class="advantages-section__header-number">№4</p>
+                        <p class="advantages-section__header-text">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
+                    </header>
+                </article>
+
+                <article class="advantages-section">
+                    <header class="advantages-section__header-content">
+                        <h3 class="advantages-section__header-heading">Мало туристов</h3>
+                        <p class="advantages-section__header-number">№5</p>
+                        <p class="advantages-section__header-text">Большинство едет в Гранд Каньон<br>и толпится там</p>
+                    </header>
+                </article>
+            </div>
         </section>
+
 
         <section class="about-us">
             <div class="about-us__content">
                 <h2 class="about-us__heading">Заинтересовались?</h2>
-                <p class="about-us__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+                <p class="about-us__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
                 <a class="about-us__link" href="blank.html" target="_blank">Найти гостиницу</a>
             </div>
-            <img class="about-us__map" src="img/map-mobile.jpg" width="320" height="350" alt="Карта">
+            <!--
+            <picture>
+                <source media="(min-width: 1200px)" srcset="img/map-desktop.jpg 1x, img/map-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/map-tablet.jpg 1x, img/map-tablet@2x.jpg 2x">
+                <img class="about-us__map" src="img/map-mobile.jpg" srcset="img/map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта">
+            </picture>
+          -->
+            <iframe class="about-us__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419140.2796634764!2d-111.92045196454704!3d34.842821515530005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1629399559401!5m2!1sru!2sru"
+                width="320" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
     </main>
 
